--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to My GitHub Pages Site</h1>
     <p>This is my first GitHub Pages deployment!</p>
+    <img src="nekojama.png" alt="かわいい猫の画像" width="300">
 </body>
 </html>
